@@ -1,5 +1,10 @@
 2004-10-05  Paolo Borelli  <pborelli@katamail.com>
 
+	* gedit-document.c: use gtk_text_buffer_set_text instead
+	of rewriting it bad.
+
+2004-10-05  Paolo Borelli  <pborelli@katamail.com>
+
 	* gedit-plugins-engine.c: cleanup.
 
 2004-10-05  Paolo Borelli  <pborelli@katamail.com>
